--- a/app/src/main/res/layout/view_dosage_addschedule.xml
+++ b/app/src/main/res/layout/view_dosage_addschedule.xml
@@ -7,7 +7,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".modules.Dosage.DosageViewModel">
+    tools:context=".modules.Dosage.DosageFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/sq1"
