Feat: 걸음수 데이터 추가 화면 구현

--- a/app/src/main/res/layout/fragment_dept_add_data.xml
+++ b/app/src/main/res/layout/fragment_dept_add_data.xml
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/texttemp"
+        android:id="@+id/dept_add_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
