--- a/app/src/main/res/layout/activity_diet_create.xml
+++ b/app/src/main/res/layout/activity_diet_create.xml
@@ -120,45 +120,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
-            android:id="@+id/diet_editing_name_Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="이름"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@id/diet_editing_name"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/diet_editing_name" />
-
-        <EditText
-            android:id="@+id/diet_editing_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:background="@color/secondary_container"
-            android:ems="10"
-            android:hint="음식 이름"
-            android:inputType="text"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="8dp"
-            android:scrollHorizontally="true"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@id/diet_editing_name_submit"
-            app:layout_constraintStart_toStartOf="@id/diet_type_TIL"
-            app:layout_constraintTop_toBottomOf="@id/diet_type_TIL" />
-
-        <Button
-            android:id="@+id/diet_editing_name_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="16dp"
-            android:text="Button"
-            app:layout_constraintBottom_toBottomOf="@id/diet_editing_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/diet_editing_name" />
-
-        <TextView
             android:id="@+id/diet_editing_date_Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -181,13 +142,13 @@
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
             app:layout_constraintStart_toStartOf="@id/diet_editing_name"
-            app:layout_constraintTop_toBottomOf="@id/diet_editing_name">
+            app:layout_constraintTop_toBottomOf="@id/diet_type_TIL">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@android:drawable/ic_menu_my_calendar"
-                tools:srcCompat="@android:drawable/ic_menu_my_calendar"/>
+                tools:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
             <TextView
                 android:id="@+id/diet_editing_date"
@@ -263,6 +224,73 @@
             app:layout_constraintStart_toEndOf="@id/diet_editing_time_title"
             app:layout_constraintTop_toBottomOf="@id/diet_editing_time_LL"
             tools:visibility="gone" />
+
+        <TextView
+            android:id="@+id/diet_editing_name_Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="이름"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@id/diet_editing_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/diet_editing_name" />
+
+        <EditText
+            android:id="@+id/diet_editing_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/secondary_container"
+            android:ems="10"
+            android:hint="음식 이름"
+            android:inputType="text"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="8dp"
+            android:scrollHorizontally="true"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@id/diet_editing_name_submit"
+            app:layout_constraintStart_toStartOf="@id/diet_type_TIL"
+            app:layout_constraintTop_toBottomOf="@id/diet_editing_time_LL" />
+
+        <Button
+            android:id="@+id/diet_editing_name_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="16dp"
+            android:text="Button"
+            app:layout_constraintBottom_toBottomOf="@id/diet_editing_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/diet_editing_name" />
+
+        <TextView
+            android:id="@+id/diet_editing_amount_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="섭취량"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@id/diet_editing_amount"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/diet_editing_amount" />
+
+        <EditText
+            android:id="@+id/diet_editing_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@color/secondary_container"
+            android:ems="10"
+            android:hint="섭취량(개수)"
+            android:inputType="number|numberDecimal"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="8dp"
+            android:scrollHorizontally="true"
+            android:text="1.0"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@id/diet_editing_name"
+            app:layout_constraintTop_toBottomOf="@id/diet_editing_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
