Feat: Dosage Recycler View 구현

--- a/app/src/main/res/layout/view_dosage_schedule_item.xml
+++ b/app/src/main/res/layout/view_dosage_schedule_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/dosage_button_alarm"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/dosage_schedule_option_IV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -76,7 +76,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/dosage_schedule_option_IV"
         android:layout_width="36dp"
         android:layout_height="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
