--- a/app/src/main/res/layout/fragment_dosage_schedule.xml
+++ b/app/src/main/res/layout/fragment_dosage_schedule.xml
@@ -82,12 +82,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/sq2"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="28dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="28dp"
+            android:layout_marginBottom="188dp"
             android:background="@drawable/shape_square_stroke"
             android:padding="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sq1">
@@ -103,8 +105,8 @@
                 android:textColor="@color/black"
                 android:textSize="19sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:id="@+id/dosage_med_search_LL"
