--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".modules.Diet.ui.DietFragment">
+    tools:context=".modules.exercise.ExerciseFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -59,7 +59,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/today_diet_CL"
-                android:layout_width="310dp"
+                android:layout_width="0dp"
                 android:layout_height="498dp"
                 android:layout_marginStart="22dp"
                 android:layout_marginTop="25dp"
@@ -189,6 +189,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.466"
                         app:srcCompat="@drawable/distance" />
+
                     <TextView
                         android:id="@+id/exercise_distance"
                         android:layout_width="wrap_content"
@@ -231,6 +232,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">
+
                     <ImageView
                         android:id="@+id/calorie"
                         android:layout_width="20dp"
@@ -243,6 +245,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.466"
                         app:srcCompat="@drawable/kcal" />
+
                     <TextView
                         android:id="@+id/exercise_calorie"
                         android:layout_width="wrap_content"
