--- a/app/src/main/res/layout/view_dosage_addschedule.xml
+++ b/app/src/main/res/layout/view_dosage_addschedule.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/sq1"
         android:layout_width="380dp"
-        android:layout_height="361dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="120dp"
@@ -21,19 +21,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/text1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="15dp"
-                android:background="@color/white"
-                android:text="@string/Dosage_info"
-                android:textColor="@color/black"
-                android:textSize="19sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/sq1"
-                app:layout_constraintTop_toTopOf="@+id/sq1" />
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/white"
+            android:text="@string/Dosage_info"
+            android:textColor="@color/black"
+            android:textSize="19sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/sq1"
+            app:layout_constraintTop_toTopOf="@+id/sq1" />
 
         <LinearLayout
             android:id="@+id/square1"
@@ -51,7 +51,7 @@
                 android:layout_marginTop="75dp"
                 android:text="@string/name"
                 android:textColor="@color/black"
-                android:textSize="19sp"/>
+                android:textSize="19sp" />
 
             <TextView
                 android:id="@+id/amount"
@@ -61,7 +61,7 @@
                 android:layout_marginTop="20dp"
                 android:text="@string/amount"
                 android:textColor="@color/black"
-                android:textSize="19dp"/>
+                android:textSize="19dp" />
 
             <TextView
                 android:id="@+id/start"
@@ -71,7 +71,7 @@
                 android:layout_marginTop="20dp"
                 android:text="@string/start_date"
                 android:textColor="@color/black"
-                android:textSize="19dp"/>
+                android:textSize="19dp" />
 
             <TextView
                 android:id="@+id/end"
@@ -81,7 +81,7 @@
                 android:layout_marginTop="20dp"
                 android:text="@string/end_date"
                 android:textColor="@color/black"
-                android:textSize="19dp"/>
+                android:textSize="19dp" />
 
             <TextView
                 android:id="@+id/time"
@@ -91,90 +91,117 @@
                 android:layout_marginTop="20dp"
                 android:text="@string/time"
                 android:textColor="@color/black"
-                android:textSize="19dp"/>
+                android:textSize="19dp" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/square1">
+            app:layout_constraintStart_toEndOf="@id/square1"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
+            <EditText
                 android:id="@+id/box1"
                 android:layout_width="121dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="170dp"
                 android:layout_marginTop="75dp"
                 android:background="@drawable/square_button"
                 android:gravity="center|start"
                 android:text="  타이레놀"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
-            <TextView
+            <EditText
                 android:id="@+id/box2"
                 android:layout_width="121dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="170dp"
                 android:layout_marginTop="14dp"
                 android:background="@drawable/square_button"
-                android:gravity="center|end"
-                android:text="정 "
+                android:gravity="center|start"
+                android:inputType="number|numberDecimal"
+                android:text="1"
                 android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="121dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-32dp"
+                android:gravity="center|end"
+                android:text="정"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/box3"
                 android:layout_width="175dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="170dp"
+                android:layout_marginStart="0dp"
                 android:layout_marginTop="14dp"
                 android:background="@drawable/square_button"
                 android:gravity="center|right"
                 android:text="YYYY-MM-DD "
-                android:textSize="21dp"/>
+                android:textSize="21dp" />
 
             <ImageButton
                 android:layout_width="25dp"
                 android:layout_height="24dp"
-                android:layout_marginStart="175dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="-30dp"
                 android:background="@drawable/dosage_calendar"
                 android:clickable="false"
                 tools:ignore="SpeakableTextPresentCheck" />
+
+            <DatePicker
+                android:id="@+id/dosage_add_start_datepicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:datePickerMode="spinner"
+                android:spinnersShown="false"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/box4"
                 android:layout_width="175dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="170dp"
                 android:layout_marginTop="19dp"
                 android:background="@drawable/square_button"
                 android:gravity="center|right"
                 android:text="YYYY-MM-DD "
-                android:textSize="21dp"/>
+                android:textSize="21dp" />
 
             <ImageButton
                 android:layout_width="25dp"
                 android:layout_height="24dp"
-                android:layout_marginStart="175dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="-30dp"
                 android:background="@drawable/dosage_calendar"
                 android:clickable="false"
                 tools:ignore="SpeakableTextPresentCheck" />
 
+            <DatePicker
+                android:id="@+id/dosage_add_end_datepicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:datePickerMode="spinner"
+                android:spinnersShown="false"
+                android:visibility="gone" />
+
             <TextView
                 android:layout_width="34dp"
                 android:layout_height="34dp"
-                android:layout_marginStart="170dp"
                 android:layout_marginTop="18dp"
-                android:background="@drawable/square_button"/>
+                android:background="@drawable/square_button" />
 
             <ImageButton
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginStart="175dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="-30dp"
                 android:background="@drawable/dosage_add"
                 android:clickable="false"
@@ -185,33 +212,35 @@
             android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
             <Button
+                android:id="@+id/dosage_add_cancelbutton"
                 android:layout_width="190dp"
                 android:layout_height="43dp"
-                android:layout_marginTop="320dp"
                 android:background="@drawable/square_button"
                 android:clickable="false"
                 android:gravity="center"
                 android:text="취소"
                 android:textColor="@color/white"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
 
             <Button
+                android:id="@+id/dosage_add_button"
                 android:layout_width="190dp"
                 android:layout_height="43dp"
-                android:layout_marginTop="320dp"
                 android:background="@drawable/square_button"
                 android:backgroundTint="@color/green"
                 android:clickable="false"
                 android:gravity="center"
                 android:text="적용"
                 android:textColor="@color/white"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
