--- a/app/src/main/res/layout/activity_dosage.xml
+++ b/app/src/main/res/layout/activity_dosage.xml
@@ -1,69 +1,275 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/medIdInput"
-            android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/create_dosage_inputs"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Medication ID"
-            android:inputType="number"
-            tools:ignore="TouchTargetSizeCheck" />
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/userInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="User"
-            tools:ignore="TouchTargetSizeCheck" />
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="72dp"
+                android:text="@string/name"
+                android:textColor="@color/black"
+                android:textSize="19sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/nameInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Name"
-            tools:ignore="TouchTargetSizeCheck" />
+            <TextView
+                android:id="@+id/amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/amount"
+                android:textColor="@color/black"
+                android:textSize="19dp"
+                app:layout_constraintBottom_toBottomOf="@id/dosage_input"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/dosage_input" />
 
-        <EditText
-            android:id="@+id/dosageInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Dosage"
-            android:inputType="numberDecimal"
-            tools:ignore="TouchTargetSizeCheck" />
+            <TextView
+                android:id="@+id/start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/start_date"
+                android:textColor="@color/black"
+                android:textSize="19dp"
+                app:layout_constraintBottom_toBottomOf="@id/dosage_start_date_LL"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/dosage_start_date_LL" />
 
-        <EditText
-            android:id="@+id/startDateInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Start Date (yyyy-MM-dd)"
-            android:inputType="date"
-            tools:ignore="TouchTargetSizeCheck" />
+            <TextView
+                android:id="@+id/end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/end_date"
+                android:textColor="@color/black"
+                android:textSize="19dp"
+                app:layout_constraintBottom_toBottomOf="@id/dosage_end_date_LL"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/dosage_end_date_LL" />
 
-        <EditText
-            android:id="@+id/endDateInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="End Date (yyyy-MM-dd)"
-            android:inputType="date"
-            tools:ignore="TouchTargetSizeCheck" />
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/time"
+                android:textColor="@color/black"
+                android:textSize="19dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/end" />
 
-        <EditText
-            android:id="@+id/memoInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Memo"
-            tools:ignore="TouchTargetSizeCheck" />
+            <TextView
+                android:id="@+id/memo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="메모"
+                android:textColor="@color/black"
+                android:textSize="19dp"
+                app:layout_constraintBottom_toBottomOf="@id/memo_input"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/memo_input" />
+
+            <EditText
+                android:id="@+id/med_id_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:hint="Medication ID"
+                android:inputType="number"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/name_input"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/name_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/square_button"
+                android:hint="Name"
+                android:padding="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/start"
+                app:layout_constraintTop_toBottomOf="@+id/med_id_input"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/dosage_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/square_button"
+                android:hint="Dosage"
+                android:inputType="numberDecimal"
+                android:padding="8dp"
+                android:text="1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/name_input"
+                app:layout_constraintTop_toBottomOf="@id/name_input"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <TextView
+                android:id="@+id/dosage_unit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:gravity="center|end"
+                android:paddingHorizontal="8dp"
+                android:text="정"
+                android:textSize="19sp"
+                app:layout_constraintBottom_toBottomOf="@id/dosage_input"
+                app:layout_constraintEnd_toEndOf="@id/dosage_input"
+                app:layout_constraintTop_toTopOf="@id/dosage_input" />
+
+            <LinearLayout
+                android:id="@+id/dosage_start_date_LL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/square_button"
+                android:orientation="horizontal"
+                android:padding="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/name_input"
+                app:layout_constraintTop_toBottomOf="@id/dosage_input">
+
+                <ImageButton
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/dosage_calendar"
+                    android:clickable="false"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <TextView
+                    android:id="@+id/dosage_start_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:background="@drawable/square_button"
+                    android:hint="YYYY-MM-DD"
+                    android:textSize="19sp" />
+
+            </LinearLayout>
+
+            <DatePicker
+                android:id="@+id/dosage_add_start_datepicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:datePickerMode="spinner"
+                android:spinnersShown="false"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dosage_start_date_LL" />
+
+            <LinearLayout
+                android:id="@+id/dosage_end_date_LL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/square_button"
+                android:orientation="horizontal"
+                android:padding="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/name_input"
+                app:layout_constraintTop_toBottomOf="@id/dosage_add_start_datepicker">
+
+                <ImageButton
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/dosage_calendar"
+                    android:clickable="false"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <TextView
+                    android:id="@+id/dosage_end_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:background="@drawable/square_button"
+                    android:hint="YYYY-MM-DD"
+                    android:textSize="19sp" />
+            </LinearLayout>
+
+            <DatePicker
+                android:id="@+id/dosage_add_end_datepicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:clipToPadding="false"
+                android:datePickerMode="spinner"
+                android:spinnersShown="false"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dosage_end_date_LL" />
+
+            <LinearLayout
+                android:id="@+id/dosage_time_LL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/name_input"
+                app:layout_constraintTop_toBottomOf="@id/dosage_add_end_datepicker">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/second_panel"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:id="@+id/dosage_time_add_button"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/dosage_add"
+                        android:clickable="false"
+                        tools:ignore="SpeakableTextPresentCheck" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/memo_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="Memo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/name_input"
+                app:layout_constraintTop_toBottomOf="@+id/dosage_time_LL"
+                tools:ignore="TouchTargetSizeCheck" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <Button
-            android:id="@+id/saveButton"
+            android:id="@+id/save_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save"/>
-    </LinearLayout>
+            android:layout_marginTop="8dp"
+            android:text="Save"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/create_dosage_inputs" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
