--- a/app/src/main/res/layout/fragment_dosage_schedule.xml
+++ b/app/src/main/res/layout/fragment_dosage_schedule.xml
@@ -52,27 +52,30 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/dosage_schedule_list_RV"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            app:layout_constraintTop_toTopOf="parent"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/dosage_schedule_list_RV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                        <include
-                            android:id="@+id/default_item"
-                            layout="@layout/view_dosage_schedule_item"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="8dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/dosage_schedule_list_RV" />
+                    <include
+                        android:id="@+id/schedule_default_item"
+                        layout="@layout/view_dosage_schedule_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/dosage_schedule_list_RV" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.core.widget.NestedScrollView>
@@ -82,14 +85,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/sq2"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="28dp"
-            android:layout_marginBottom="188dp"
             android:background="@drawable/shape_square_stroke"
-            android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:clipChildren="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sq1">
@@ -112,9 +113,9 @@
                 android:id="@+id/dosage_med_search_LL"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="24dp"
                 android:background="@drawable/shape_roundsq_stroke"
                 android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +123,7 @@
                 app:layout_constraintTop_toBottomOf="@id/textView2">
 
                 <EditText
-                    android:id="@+id/editTextText"
+                    android:id="@+id/med_search_edit_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -130,6 +131,7 @@
                     android:background="@null"
                     android:ems="10"
                     android:hint="@string/Dosage_entername"
+                    android:imeOptions="actionSearch"
                     android:inputType="text"
                     android:singleLine="true"
                     android:textSize="17sp" />
@@ -145,19 +147,29 @@
                     tools:ignore="SpeakableTextPresentCheck" />
             </LinearLayout>
 
+            <View
+                android:id="@+id/med_search_div_line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dosage_med_search_LL"></View>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/shape_roundsq_stroke"
                 android:backgroundTint="@color/lightgreen"
                 android:minHeight="160dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dosage_med_search_LL">
+                app:layout_constraintTop_toBottomOf="@+id/med_search_div_line">
 
                 <TextView
                     android:id="@+id/med_no_search_result_TV"
